[package]
name = "dr_filter_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
futures = "0.3.28"
indexmap = "2.1.0"
log = "0.4.20"
reqwest = "0.11.22"
rss = "2.0.6"
scraper = "0.18.1"
tokio = { version = "1.32.0", features = ["full"] }
